--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12 col-lg-12">
-					<button type="button" class="btn btn-sign-in" id="sign"><a href="#" id="new">iniciar sesión</a></button>
+					<button type="button" class="btn btn-sign-in" id="sign"><a href="collage.html" id="new">iniciar sesión</a></button>
 				</div>
 			</div>
 		</div>
@@ -76,6 +76,6 @@
 	</section>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<script src="asset/js/main.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
