--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	<section id="registrate">
 		<div class="container">
 			<div class="row">
-				<div class="regis col-xs-12 col-md-12 col-lg-12">
+				<div class="col-md-12 col-lg-12">
 					<p>¿No tienes una cuenta? <strong><a href="#">Registrate.</a></strong></p>
 				</div>
 			</div>
